--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <ul class="burguer__items">
                 <li class="burguer__item"><a href="#about-us" class="burguer__link">ABOUT US</a></li>
                 <li class="burguer__item"><a href="#construction-design" class="burguer__link">CONSTRUCTION AND DESIGN</a></li>
-                <li class="burguer__item"><a href="#contact-u" class="burguer__link">CONTACT US</a></li>
+                <li class="burguer__item"><a href="#contact-us" class="burguer__link">CONTACT US</a></li>
                 <li class="burguer__item"><a href="#team" class="burguer__link">TEAM</a></li>
                 <li class="burguer__item"><a href="#work-us" class="burguer__link">WORK AT US</a></li>
             </ul>
