--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
                 <h2 class="aparecer">DESING BUILD INNOVATE</h2>
             </article>
         </section> <!-- Fin Hero Seccion -->
-        <section class="burguer-container">
-            <div class="toggle-button">
-            <i class="bi bi-list"></i>
-                
+        <section class="burguer-container aparecer"> <!-- Inicio burguer menu  -->
+            <div class="toggle-button ">
+            <i class="bi bi-list"></i>    
             </div>
             <ul class="burguer__items">
                 <li class="burguer__item"><a href="#about-us" class="burguer__link">ABOUT US</a></li>
@@ -48,7 +47,7 @@
                 <li class="burguer__item"><a href="#team" class="burguer__link">TEAM</a></li>
                 <li class="burguer__item"><a href="#work-us" class="burguer__link">WORK AT US</a></li>
             </ul>
-        </section>
+        </section> <!-- Fin burguer menu  -->
         <main class="main-content">
             <section class="about container" id="about-us"><!-- Inicio About Us Seccion -->
                 <article class="about__content">
@@ -122,8 +121,8 @@
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </section><!-- Fin Work at Us Seccion -->
         </main>
-        <footer class="footer"> <!-- Inicio Footer -->
-            <seccion class="footer__content container">
+        <footer class="footer "> <!-- Inicio Footer -->
+            <seccion class="footer__content">
                 <article class="footer__contact">
                     <h2> Brisas del Valle, Roatan, Honduras</h2>
                     <a href="">bdi.construction@gmil.com</a>
